     * ACL match conditions can now match on Port_Groups as well as address
       sets that are automatically generated by Port_Groups.  ACLs can be
       applied directly to Port_Groups as well.
   - DPDK:
     * New 'check-dpdk' Makefile target to run a new system testsuite.
       See Testing topic for the details.
     * Add LSC interrupt support for DPDK physical devices.
   - Userspace datapath:
     * Commands ovs-appctl dpif-netdev/pmd-*-show can now work on a single PMD
     * Detailed PMD performance metrics available with new command
         ovs-appctl dpif-netdev/pmd-perf-show
     * Supervision of PMD performance metrics and logging of suspicious
       iterations

v2.9.0 - 19 Feb 2018
--------------------
   - NSH implementation now conforms to latest draft (draft-ietf-sfc-nsh-28).
     * Add ttl field.
     * Add a new action dec_nsh_ttl.
     * Enable NSH support in kernel datapath.
   - OVSDB has new, experimental support for database clustering:
     * New high-level documentation in ovsdb(7).
     * New file format documentation for developers in ovsdb(5).
     * Protocol documentation moved from ovsdb-server(1) to ovsdb-server(7).
     * ovsdb-server now supports online schema conversion via
       "ovsdb-client convert".
     * ovsdb-server now always hosts a built-in database named _Server.  See
       ovsdb-server(5) for more details.
     * ovsdb-client: New "get-schema-cksum", "query", "backup", "restore",
       and "wait" commands.  New --timeout option.
     * ovsdb-tool: New "create-cluster", "join-cluster", "db-cid", "db-sid",
       "db-local-address", "db-is-clustered", "db-is-standalone", "db-name",
       "schema-name", "compare-versions", and "check-cluster" commands.
     * ovsdb-server: New ovs-appctl commands for managing clusters.
     * ovs-sandbox: New support for clustered databases.
   - ovs-vsctl and other commands that display data in tables now support a
     --max-column-width option to limit column width.